allow update of single fields of Agent. Introduces custom validators and new dto UpdateAgentDto
